--- a/app/src/main/res/layout/activity_humidity.xml
+++ b/app/src/main/res/layout/activity_humidity.xml
@@ -19,15 +19,16 @@
 
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@color/gray_100"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="@+id/toolbar"
         app:layout_constraintTop_toTopOf="@+id/toolbar"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+        android:contentDescription="@string/arrow_back" />
 
     <TextView
         android:id="@+id/textView3"
@@ -35,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="IoT Kelembaban"
+        android:text="@string/iot_moisture"
         app:layout_constraintBottom_toBottomOf="@+id/btnBack"
         app:layout_constraintStart_toEndOf="@+id/btnBack"
         app:layout_constraintTop_toTopOf="@+id/btnBack" />
@@ -45,7 +46,7 @@
         style="@style/textH1Black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kelembapan"
+        android:text="@string/moisture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,11 +55,12 @@
     <Button
         android:id="@+id/btnSend"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="32dp"
-        android:text="Send to Calculator"
+        android:textAllCaps="false"
+        android:text="@string/send_to_calculator"
         android:background="@drawable/rounded_bg_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
