--- a/app/src/main/res/layout/item_slider.xml
+++ b/app/src/main/res/layout/item_slider.xml
@@ -12,6 +12,6 @@
         android:id="@+id/iv_slider"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="Slider Pupuk"
+        android:contentDescription="@string/slider_fertilizer"
         android:scaleType="centerCrop" />
 </androidx.cardview.widget.CardView>
