--- a/app/src/main/res/layout/item_fertilizer.xml
+++ b/app/src/main/res/layout/item_fertilizer.xml
@@ -26,7 +26,8 @@
             android:src="@drawable/image1"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            card_view:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/photo_fertilizer" />
 
         <TextView
             android:id="@+id/tv_item_name"
