--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintTop_toTopOf="@+id/btnBack" />
 
             <TextView
-                android:id="@+id/tvTemperature"
+                android:id="@+id/tvMoisture"
                 style="@style/textH4Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -81,7 +81,7 @@
                 app:boxBackgroundColor="@color/gray_100"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvTemperature">
+                app:layout_constraintTop_toBottomOf="@+id/tvMoisture">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_temperature"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:text="@string/humidity"
-                app:layout_constraintStart_toStartOf="@+id/tvTemperature"
+                app:layout_constraintStart_toStartOf="@+id/tvMoisture"
                 app:layout_constraintTop_toBottomOf="@+id/temperature_text_input_layout" />
 
             <com.google.android.material.textfield.TextInputLayout
