--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -92,6 +92,11 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="textH3White" parent="latoBold">
+        <item name="android:textColor">@color/gray_100</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="textH4White" parent="latoBold">
         <item name="android:textColor">@color/gray_100</item>
         <item name="android:textSize">16sp</item>
